Wrap "0em" with "calc()" to prevent it from being minified to "0"
CSS::Minifier::XS automatically converts "0em" to "0", which broke the
change in ca30016112. As CSS::Minifier::XS doesn't have an option to
customize the behavior, here we use "calc(0em)" to prevent the behavior.

--- a/share/static/css/elevator/tom-select.bootstrap5.css
+++ b/share/static/css/elevator/tom-select.bootstrap5.css
@@ -371,8 +371,8 @@
 }
 
 :root {
-  --ts-pr-clear-button: 0em;
-  --ts-pr-caret: 0em;
+  --ts-pr-clear-button: calc(0em);
+  --ts-pr-caret: calc(0em);
   --ts-pr-min: .75rem;
 }
 
